--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -122,4 +122,4 @@ pages:
   - Statedump: Troubleshooting/statedump.md
 - Google Site Verification: ./google64817fdc11b2f6b6.html
 
-theme: readthedocs
+theme: Developer-guide/Developers-Index.md
